# Mineradio

./: .gitignore  README.md  install.sh  package.json
docs/: build-release.md
frontend/: package.json  rsbuild.config.ts
frontend/public/: desktop-lyrics.html  index.html  wallpaper.html
frontend/src/: index.html  index.ts
frontend/src/bridge/: index.ts
scripts/: package-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  login.rs  main.rs
src-tauri/src/server/: dj_analyzer.rs  mod.rs  proxy.rs  qq.rs  update.rs  weather.rs
src-tauri/src/server/netease/: client.rs  cookie_store.rs  crypto.rs  endpoints.rs  mod.rs  qr.rs
