[package]
name = "mineradio"
version = "1.1.1"
description = "Mineradio 沉浸式音乐播放器"
authors = ["Mineradio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mineradio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 内嵌 HTTP 后端（替换 server.js）
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http1", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "cookies"] }
bytes = "1"
futures-util = "0.3"

# 网易云加密信封
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
rsa = "0.9"
num-bigint-dig = "0.8"
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# 扫码登录二维码生成
qrcode = { version = "0.14", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
